--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ zeek_plugin_pac(
 )
 zeek_plugin_cc(src/JPEG.cc src/Plugin.cc)
 zeek_plugin_bif(src/jpeg.bif src/types.bif src/events.bif)
-zeek_plugin_dist_files(README CHANGES COPYING VERSION)
+zeek_plugin_dist_files(README.md CHANGES COPYING VERSION)
 zeek_plugin_end()
 
 file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" VERSION LIMIT_COUNT 1)
