--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ zeek_plugin_pac(
         src/jpeg-file-headers.pac
         src/jpeg-file.pac
 )
-zeek_plugin_cc(src/JPEG.cc src/Plugin.cc)
+zeek_plugin_cc(src/jpeg.cc src/Plugin.cc)
 zeek_plugin_bif(src/jpeg.bif src/types.bif src/events.bif)
 zeek_plugin_dist_files(README.md CHANGES COPYING VERSION)
 zeek_plugin_end()
